--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,61 +1,61 @@
-.home {
-  /* width: 100%; */
-  height: 81.6vh;
-  padding: 80px;
+.header {
   display: flex;
   flex-direction: column;
+  border-bottom: 1px solid rgba(0,0,0,.25);
+  gap: 15px
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  padding: 0px 65px 0px 35px;
+  margin: 0;
+  box-shadow: 0 4px 7px 0 rgba(0,0,0,.1)
+}
+
+.logo h2 {
+  font-size: 40px;
+  font-weight: 600;
+  font-family: "Madimi One", sans-serif;;
+  color: #212121;
+  letter-spacing: 1px
+}
+
+.menu__links {
+  display: flex;
   align-items: center;
   justify-content: center;
-  margin: auto;
-  flex-wrap: wrap;
-  overflow: hidden;
-  background-color: #212121;
+  gap: 25px;
+  margin: 0
 }
 
-.title {
-  font-size: 70px;
-  font-family: 'Courier New', Courier, monospace;
-  text-align: center;
-  color: #fff;
-  max-width: 620px;
-}
-
-.description {
-  font-size: 18px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  color: #e7e7e7;
-  text-align: center;
-  line-height: 24px;
-  padding: 0 60px;
-  max-width: 620px;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-top: 40px;
-}
-
-input {
-  padding: 16px 49px 16px 25px;
-  border-radius: 25px;
+.menu__links a {
   font-size: 16px;
-  border: 1px solid hsla(0, 0%, 100%, 0.2);
+  text-transform: uppercase;
+  color: #000
+}
+
+.header-search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.header-search input{
+  padding: 10px 30px 10px 20px;
   outline: none;
-  font-family: 'Courier New', Courier, monospace;
-  background: transparent;
-  color: #fff;
-  box-shadow: 0px 0px 8px 0px rgba(255, 255, 255, 0.03);
+  border: 1px solid rgba(0,0,0,.3);
+  border-radius: 7px;
+  color: #323232;
+  font-size: 14px;
 }
 
-.btn {
-  padding: 16px 37px;
-  cursor: pointer;
+.header-search i {
+  position: absolute;
+  right: 7px;
+  color: rgba(0,0,0,.5)
 }
-
-.btn:hover {
-  background-color: #dc143c;
-  transition: background .3s;
-}
-
