--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,8 @@
 <header class="header">
   <app-top-menu></app-top-menu>
   <div class="menu">
-    <div class="logo">
-      <h2>eKart</h2>
-    </div>
-    <ul class="menu__links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-    <div class="header-search">
-      <input type="text" name="search" id="" placeholder="Search">
-      <i class="fa-solid fa-magnifying-glass"></i>
-    </div>
+    <app-logo></app-logo>
+    <app-menu></app-menu>
+    <app-search></app-search>
   </div>
 </header>
