--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -1,6 +1,3 @@
 <ul class="menu__links">
-  <li><a href="#">Home</a></li>
-  <li><a href="#">Products</a></li>
-  <li><a href="#">About</a></li>
-  <li><a href="#">Contact</a></li>
+  <li *ngFor="let data of listLinks"><a [href]="data.link">{{data.name}}</a></li>
 </ul>
