--- a/src/app/container/product-list/product-list.component.html
+++ b/src/app/container/product-list/product-list.component.html
@@ -2,7 +2,10 @@
   (selectedFilterChanged)="filterChanged($event)"></app-filter>
 <div class="container">
   <div class="row justify-content-center">
-    <div class="m-3 p-0 w-auto" *ngFor="let prod of products">
+    <div 
+    class="m-3 p-0 w-auto" 
+    *ngFor="let prod of products"
+    (click)="selectedProduct = prod">
       <div 
       *ngIf="(
       (receivedSearchValue === '') 
@@ -12,7 +15,7 @@
       ">
         <app-product 
         [product]="prod"
-        *ngIf="(selectedFilter === 'all' || prod.isAvailable.toString() === selectedFilter)">
+        *ngIf="(selectedFilter === 'all' || prod.is_in_inventory.toString() === selectedFilter)">
         </app-product>
       </div>
     </div>
