--- a/src/app/container/search-product/search-product.component.html
+++ b/src/app/container/search-product/search-product.component.html
@@ -5,7 +5,7 @@
   #searchInput>
   <button
   class="btn btn-search"
-  (click)="onSubmitSearch(searchInput)">
+  (click)="onSubmitSearch()">
   Search
   </button>
 </div>
