--- a/src/app/container/product-details/product-details.component.html
+++ b/src/app/container/product-details/product-details.component.html
@@ -1,6 +1,5 @@
 <div class="ekart--product--details--info scroll">
-    <div class="ekart-product-detail-close"
-    (click)="closeSidebar()">
+    <div class="ekart-product-detail-close" (click)="closeSidebar()">
         <i class="fa fa-times" aria-hidden="true"></i>
     </div>
     <div class="ekart-product-detail-image">
@@ -20,8 +19,7 @@
             <p>
                 <b>Price Each Pair:</b>
                 <span style="background-color: red; color:white"
-                *ngIf="product.discountPrice"
-                ><s>${{product.price}}</s></span>
+                    *ngIf="product.discountPrice"><s>${{product.price}}</s></span>
                 <span style="background-color: green; color:white">
                     <span *ngIf="product.discountPrice" style="padding: 0;">
                         ${{product.discountPrice}}
@@ -49,10 +47,14 @@
                 <h4>Available Color</h4>
             </div>
             <diV style="margin-top: 20px;">
-                <span class="ekart-product-detail-available-color" [ngStyle]="{'background-color': product.color[0]}"></span>
-                <span class="ekart-product-detail-available-color" [ngStyle]="{'background-color': product.color[1]}"></span>
-                <span class="ekart-product-detail-available-color" [ngStyle]="{'background-color': product.color[2]}"></span>
-                <span class="ekart-product-detail-available-color" [ngStyle]="{'background-color': product.color[3]}"></span>
+                <span class="ekart-product-detail-available-color"
+                    [ngStyle]="{'background-color': product.color[0]}"></span>
+                <span class="ekart-product-detail-available-color"
+                    [ngStyle]="{'background-color': product.color[1]}"></span>
+                <span class="ekart-product-detail-available-color"
+                    [ngStyle]="{'background-color': product.color[2]}"></span>
+                <span class="ekart-product-detail-available-color"
+                    [ngStyle]="{'background-color': product.color[3]}"></span>
             </diV>
         </div>
 
@@ -66,7 +68,10 @@
         </div>
     </div>
     <div class="ekart-product-detail-addtoCart">
-        <button class="btn-add-to-cart">ADD TO CART</button>
+        <button class="btn-add-to-cart" *ngIf="product.is_in_inventory; else notifyMe">ADD TO CART</button>
+        <ng-template #notifyMe>
+            <button class="btn-add-to-cart">NOTIFY ME</button>
+        </ng-template>
     </div>
 </div>
 <div class="overlay"></div>
