--- a/src/app/container/product-details/product-details.component.html
+++ b/src/app/container/product-details/product-details.component.html
@@ -11,9 +11,9 @@
             <h2> {{product.name}} </h2>
         </div>
         <div class="ekart-product-detail-gbc">
-            <span>{{product.gender}}</span>
-            <span>{{product.brand}}</span>
-            <span>{{product.category}}</span>
+            <span SetBackground>{{product.gender}}</span>
+            <span SetBackground>{{product.brand}}</span>
+            <span SetBackground>{{product.category}}</span>
         </div>
         <div class="ekart-product-detail-price">
             <p>
@@ -68,10 +68,10 @@
         </div>
     </div>
     <div class="ekart-product-detail-addtoCart">
-        <button class="btn-add-to-cart" *ngIf="product.is_in_inventory; else notifyMe">ADD TO CART</button>
+        <button class="btn-add-to-cart" *ngIf="product.is_in_inventory; else notifyMe" appHover>ADD TO CART</button>
         <ng-template #notifyMe>
-            <button class="btn-add-to-cart">NOTIFY ME</button>
+            <button class="btn-add-to-cart" appHover>NOTIFY ME</button>
         </ng-template>
     </div>
 </div>
-<div class="overlay"></div>
+<div class="overlay" (click)="closeSidebar()"></div>
