--- a/src/app/container/product-list/product/product.component.css
+++ b/src/app/container/product-list/product/product.component.css
@@ -15,6 +15,7 @@
   padding-left: 10px;
   padding-right: 10px;
   border: #efefef 2px solid;
+  transition: all .25s ease-in-out;
 }
 
 .ekart-wishlist-sale-container{
@@ -65,10 +66,19 @@
   color: #999;
   margin-top: 7px;
 }
-.ekart--product--item:hover{
+/* .ekart--product--item:hover{
   -webkit-box-shadow: 0 0 1px #000 inset;
   -moz-box-shadow: 0 0 1px 3px #000 inset;
   border: #efefef 0 0 1px 3px #000 inset;
   box-shadow: 10px 10px 18px #cccccc;
   transform: scale(1.05);
+} */
+
+.highlight-product {
+  -webkit-box-shadow: 0 0 1px 3px #000 insert;
+  -moz-box-shadow: 0 0 1px 3px #000 insert;
+  border: #efefef 2px solid;
+  box-shadow: 10px 10px 18px #cccccc;
+  transform: scale(1.05);
+  transition: all .25s ease-in-out;
 }
