--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all .2s ease-in-out;
 }
 
 html {
@@ -24,4 +25,10 @@ a {
 
 li {
   list-style: none
+}
+
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
